// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Items/Brand Card Favourited 1`] = `
<div
  className="sc-bdnylx dHYuvc"
  width={20}
>
  <div
    className="image-container"
  >
    <img
      alt="Ice Cream image"
      src="brand_kwalitywalls.png"
    />
  </div>
  <div
    className="name"
  >
    Ice Cream
  </div>
  <div
    className="items"
  >
    8
     items
  </div>
  <i
    aria-hidden="true"
    className="red heart large icon"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Items/Brand Card Not Favourited 1`] = `
<div
  className="sc-bdnylx dHYuvc"
  width={20}
>
  <div
    className="image-container"
  >
    <img
      alt="Ice Cream image"
      src="brand_kwalitywalls.png"
    />
  </div>
  <div
    className="name"
  >
    Ice Cream
  </div>
  <div
    className="items"
  >
    8
     items
  </div>
  <i
    aria-hidden="true"
    className="grey heart outline large icon"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Items/Category Card Simple Card Left Aligned Light Background 1`] = `
<div
  className="sc-gtssRu gFyMBZ"
  width={50}
>
  <img
    alt="Ice Cream image"
    src="category_groceries.jpg"
  />
  <div
    className="name"
  >
    Ice Cream
  </div>
  <div
    className="brands"
  >
    8
     brands
  </div>
</div>
`;

exports[`Storyshots Items/Category Card Simple Card Right Aligned Dark Background 1`] = `
<div
  className="sc-gtssRu jdIwCN"
  width={50}
>
  <img
    alt="Ice Cream image"
    src="category_icecream.jpg"
  />
  <div
    className="name"
  >
    Ice Cream
  </div>
  <div
    className="brands"
  >
    8
     brands
  </div>
</div>
`;

exports[`Storyshots Items/Item Card Favourited 1`] = `
<div
  className="sc-dlnjPT hkXoBx"
  width={20}
>
  <div
    className="image-container"
  >
    <div>
      <img
        alt="Ice Cream image"
        src="brand_kwalitywalls.png"
      />
    </div>
  </div>
  <div
    className="details-container"
  >
    <div
      className="brand"
    >
      Kwality Walls
    </div>
    <div
      className="name"
    >
      Ice Cream
    </div>
    <div
      className="stock"
    >
      Available in stock: 
      8
    </div>
    <div
      className="price"
    >
      Rs. 
      100
    </div>
    <i
      aria-hidden="true"
      className="red heart large icon"
      onClick={[Function]}
    />
    <div
      className="add-button-container"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        <div
          className="detail"
        >
          -
        </div>
        <div
          className="detail"
        >
          8
        </div>
        <div
          className="detail"
        >
          +
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Items/Item Card Not Added 1`] = `
<div
  className="sc-dlnjPT hkXoBx"
  width={20}
>
  <div
    className="image-container"
  >
    <div>
      <img
        alt="Ice Cream image"
        src="brand_kwalitywalls.png"
      />
    </div>
  </div>
  <div
    className="details-container"
  >
    <div
      className="brand"
    >
      Kwality Walls
    </div>
    <div
      className="name"
    >
      Ice Cream
    </div>
    <div
      className="stock"
    >
      Available in stock: 
      0
    </div>
    <div
      className="price"
    >
      Rs. 
      100
    </div>
    <i
      aria-hidden="true"
      className="grey heart outline large icon"
      onClick={[Function]}
    />
    <div
      className="add-button-container"
    >
      <button
        className="ui button"
        onClick={[Function]}
      >
        Add
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Items/Item Card Not Favourited 1`] = `
<div
  className="sc-dlnjPT hkXoBx"
  width={20}
>
  <div
    className="image-container"
  >
    <div>
      <img
        alt="Ice Cream image"
        src="brand_kwalitywalls.png"
      />
    </div>
  </div>
  <div
    className="details-container"
  >
    <div
      className="brand"
    >
      Kwality Walls
    </div>
    <div
      className="name"
    >
      Ice Cream
    </div>
    <div
      className="stock"
    >
      Available in stock: 
      8
    </div>
    <div
      className="price"
    >
      Rs. 
      100
    </div>
    <i
      aria-hidden="true"
      className="grey heart outline large icon"
      onClick={[Function]}
    />
    <div
      className="add-button-container"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        <div
          className="detail"
        >
          -
        </div>
        <div
          className="detail"
        >
          8
        </div>
        <div
          className="detail"
        >
          +
        </div>
      </div>
    </div>
  </div>
</div>
`;
